# task_management_with_ai_integration

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  run_migrations.py
app/: main.py
app/api/: deps.py
app/api/v1/: appeals.py  auth.py  evidence.py  projects.py  reports.py  tasks.py
app/core/: config.py  database.py  security.py
app/models/: domain.py
app/schemas/: auth_schema.py  project_schema.py  task_schema.py
app/services/: ai_service.py  auth_service.py  evidence_service.py  instruction_extractor.py  pdf_extractor.py  project_service.py  report_service.py  task_service.py
db/: init.sql
migrations/: 001_add_publication_and_rejection_columns.sql
tests/: test_unit.py
tests/integration/: conftest.py  test_appeal_flow.py  test_auth_flow.py  test_auto_approve_flow.py  test_evidence.py  test_instruction_flex.py  test_refresh_flow.py
