[project]
name = "task-management"
version = "0.1.0"
description = "REST API for AI-powered task management"
readme = "README.md"
requires-python = ">=3.12" 
dependencies = [
    "fastapi>=0.136.1",
    "google-generativeai>=0.8.6",
    "PyMuPDF>=1.24.0",
    "pdfplumber>=0.11.9",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "httpx>=0.27.0",
    "uvicorn>=0.46.0",
    "sqlmodel>=0.0.38",
    "asyncpg>=0.31.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.12.1",
    "aiofiles>=25.1.0",
    "jinja2>=3.1.6",
    "weasyprint>=68.1",
    "bcrypt==4.0.1",
    "google-genai>=2.0.1",
]
